# pnp-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/components/: AdvancedPromptBuilder.tsx  ChatInterface.tsx  PromptSettings.tsx
frontend/src/app/utils/: PromptConstants.tsx
ingest/: README.md  clone_repo.py  constants.py  pipeline.py
ingest/tests/: test_clone_repo.py  test_pipeline.py
